lox-tests/tests/method/extra_arguments.stderr
ERROR: Expected 2 arguments in function call but got 4
 --> 8:1
  |
8 | Foo().method(1, 2, 3, 4); // expect runtime error: Expected 2 arguments but got 4.
  | ^----------------------^
